# gpt2-haskell

./: README.md  cabal.project  flake.nix
examples/: examples.cabal
examples/inference/: Main.hs
gpt2-haskell/: gpt2-haskell.cabal
gpt2-haskell/src/: GPT2.hs  SafeTensors.hs
gpt2-haskell/src/GPT2/: Loader.hs  Model.hs
