cabal-version: 3.4
name:          examples
version:       0.1.0.0
license:
author:        Collin Arnett
maintainer:    collin@arnett.it
build-type:    Simple

common base
  ghc-options:      -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans -O0
  default-language: Haskell2010
  build-depends:
    , base       >=4.12 && <5
    , hasktorch  >=0.2  && <0.3

common binary-base
  import:      base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable inference
  import:         binary-base
  build-depends:
    , aeson
    , binary
    , bytestring
    , constraints
    , ghc
    , gpt2-haskell
    , hashmap
    , libtorch-ffi
    , safe-exceptions
    , tiktoken
    , transformers
    , unordered-containers

  main-is:        Main.hs
  hs-source-dirs: inference

