cabal-version:   3.4
name:            gpt2-haskell
version:         0.1.0.0
license:
author:          Collin Arnett
maintainer:      collin@arnett.it
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common base
  ghc-options:      -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans -O0
  default-language: Haskell2010
  build-depends:
    , base       >=4.12 && <5
    , hasktorch  >=0.2  && <0.3

common binary-base
  import:      base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          base
  build-depends:
    , aeson
    , binary
    , bytestring
    , containers
    , ghc
    , ghc-typelits-extra
    , ghc-typelits-knownnat
    , ghc-typelits-natnormalise
    , hashmap
    , libtorch-ffi
    , libtorch-ffi-helper
    , safe-exceptions
    , transformers

  hs-source-dirs:  src
  ghc-options:
    -fplugin GHC.TypeLits.Normalise -fplugin
    GHC.TypeLits.KnownNat.Solver -fplugin GHC.TypeLits.Extra.Solver
    -fconstraint-solver-iterations=0 -fplugin GHC.NotExport.Plugin

  exposed-modules:
    GPT2
    GPT2.Loader
    GPT2.Model
    SafeTensors
